refactor to stuct resp and awagg doc
