# internal/api/chat/chat.go
@@ -8,7 +8,6 @@ import (
 	"deferredMessage/internal/utils/dto"
 	sessionutils "deferredMessage/internal/utils/sessionUtils"
 	"net/http"
-	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -25,9 +24,19 @@ func Init(services *service.Service, middleware *middleware.Middleware) chatApi 
 	}
 }
 
-// HandleCreateChat
+// HandleCreateChat creates a new chat.
+// @Summary Create a chat
+// @Description Creates a new chat with the provided chat details.
+// @Security Bearer
+// @Tags Chat
+// @Accept json
+// @Produce json
+// @Param body body ChatRequest true "Chat details"
+// @Success 200 {object} CreateChatResponse "Chat created successfully"
+// @Failure 400 {object} models.ErrorResponse "Bad request"
+// @Router /api/chat [post]
 func (n chatApi) HandleCreateChat(c *gin.Context) {
-	body, exist := dto.GetStruct[Chat](c, Chat{})
+	body, exist := dto.GetStruct[ChatRequest](c, ChatRequest{})
 	if !exist {
 		c.AbortWithStatusJSON(http.StatusBadRequest, models.ErrorResponse{
 			Error: "no body"})
@@ -72,11 +81,30 @@ func (n chatApi) HandleCreateChat(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"chat": gin.H{"linker": linker, "id": createdChat.ID, "name": createdChat.Name, "botIdentifier": createdChat.BotIdentifier, "botId": createdChat.BotID, "verified": createdChat.Verified}})
-
+	c.JSON(http.StatusOK,
+		CreateChatResponse{
+			Chat: createdChatType{
+				Linker:        linker,
+				Name:          createdChat.Name,
+				BotIdentifier: createdChat.BotIdentifier,
+				BotID:         createdChat.BotID,
+				Verified:      createdChat.Verified,
+				Id:            createdChat.ID,
+			},
+		},
+	)
 }
 
-// HandleChatsList
+// HandleGetChatsList retrieves a list of chats created by the authenticated user.
+// @Summary Get chats list
+// @Description Retrieves a list of chats created by the authenticated user.
+// @Security Bearer
+// @Tags Chat
+// @Accept json
+// @Produce json
+// @Success 200 {object} ChatsListResponse "List of chats"
+// @Failure 400 {object} models.ErrorResponse "Bad request"
+// @Router /api/chat [get]
 func (n chatApi) HandleGetChatsList(c *gin.Context) {
 	session, err := sessionutils.GetSession(c)
 	if err != nil {
@@ -84,97 +112,46 @@ func (n chatApi) HandleGetChatsList(c *gin.Context) {
 			Error: err.Error()})
 		return
 	}
-
-	user, exist, err := n.services.UserService.GetUserByID(session.UserID)
-
+	lims, err := dto.GetLimits(c)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, models.ErrorResponse{
-			Error: err.Error()})
-		return
-	}
-	if !exist {
-		c.AbortWithStatusJSON(http.StatusBadRequest, models.ErrorResponse{
-			Error: "user not found"})
-		return
-	}
-	//get from url query params [count, offset]
-	countString := c.DefaultQuery("count", "10")
-	offsetString := c.DefaultQuery("offset", "0")
-	count, err := strconv.Atoi(countString)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, models.ErrorResponse{
-			Error: err.Error()})
-		return
-	}
-	offset, err := strconv.Atoi(offsetString)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, models.ErrorResponse{
-			Error: err.Error()})
-		return
-	}
-	diff := len(user.Chats) - offset
-	if count > diff {
-		count = diff
-	}
-	if count < 0 {
-		c.JSON(http.StatusOK, gin.H{"chats": []gin.H{}})
-		return
-	}
-	userChatsId := user.Chats
-	chatsId := userChatsId[offset : offset+count]
-	if len(chatsId) == 0 {
-		//empty array
-		c.JSON(http.StatusOK, gin.H{"chats": []gin.H{}})
-		return
-	}
-	chats, err := n.services.ChatService.GetChatsByArrayID(chatsId)
-
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, models.ErrorResponse{
-			Error: err.Error()})
-		return
-	}
-
-	var respArray []Chat
-	for _, chat := range chats {
-		respArray = append(respArray, Chat{
-			ID:            chat.ID,
-			Name:          chat.Name,
-			BotIdentifier: chat.BotIdentifier,
-			BotID:         chat.BotID,
-			LinkOrIdInBot: chat.LinkOrIdInBot,
-			Verified:      chat.Verified,
+			Error: err.Error(),
 		})
 	}
-	c.JSON(http.StatusOK, gin.H{"chats": respArray, "offset": offset, "count": count})
+
+	chats, err := n.services.ChatService.GetChatsListByCreatorWithLimits(session.UserID, lims.Offset, lims.Count)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, models.ErrorResponse{
+			Error: err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, ChatsListResponse{
+		Chats:  chats,
+		Offset: lims.Offset,
+		Count:  lims.Count,
+	})
 }
 
-// HandleUpdateChatSettings by /:id
+// HandleUpdateChatSettings updates the settings of a chat.
+// @Summary Update chat settings
+// @Description Updates the settings of a chat identified by the provided ID.
+// @Router /api/chat/{id} [put]
+// @Security Bearer
+// @Tags Chat
+// @Accept json
+// @Param id path string true "Chat ID"
+// @Param name body string false "Chat name"
+// @Param linkOrIdInBot body string false "Link or ID in bot"
+// @Success 200 {object} models.SuccessResponse "Settings updated successfully"
+// @Failure 400 {object} models.ErrorResponse "Bad request"
 func (n chatApi) HandleUpdateChatSettings(c *gin.Context) {
 	var body map[string]interface{}
 	if err := c.ShouldBindJSON(&body); err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, models.ErrorResponse{
 			Error: err.Error()})
-
 	}
-	params := make(map[string]interface{})
-	//check name in body
-	if body["name"] != nil {
-		switch body["name"].(type) {
-		case string:
-			params["name"] = body["name"].(string)
-		}
-
-	}
-	//linkOrIdInBot
-	if body["linkOrIdInBot"] != nil {
-		switch body["linkOrIdInBot"].(type) {
-		case string:
-			params["linkOrIdInBot"] = body["linkOrIdInBot"].(string)
-		}
-	}
-	//fmt.Println(params)
-
+	params := dto.TypedMap([]dto.ParamTyped{{Name: "name", Type: "string"}, {Name: "linkOrIdInBot", Type: "string"}}, body)
 	session, err := sessionutils.GetSession(c)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, models.ErrorResponse{
@@ -183,8 +160,6 @@ func (n chatApi) HandleUpdateChatSettings(c *gin.Context) {
 	}
 
 	chatId := c.Param("id")
-	//	fmt.Printf("chatId: %v\n", chatId)
-
 	chat, exist, err := n.services.ChatService.GetChatByID(chatId)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, models.ErrorResponse{
@@ -207,7 +182,9 @@ func (n chatApi) HandleUpdateChatSettings(c *gin.Context) {
 			Error: err.Error()})
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"status": "ok"})
+	c.JSON(http.StatusOK, models.SuccessResponse{
+		Status: "ok",
+	})
 }
 
 func (n chatApi) Router(router *gin.RouterGroup) *gin.RouterGroup {
